Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
10.2.2, 10.3.0, 10.0(EOL), 10.1(EOL)
Description
MariaDB 10.0 or 10.1 are not affected; they would report an error. But MariaDB 10.2 will crash if AUTO_INCREMENT is being set on a table whose data file has been discarded:
--source include/have_innodb.inc
|
CREATE TABLE t1(a SERIAL)ENGINE=InnoDB; |
INSERT INTO t1 VALUES(1),(2),(3); |
ALTER TABLE t1 DISCARD TABLESPACE; |
--error ER_TABLESPACE_DISCARDED
|
ALTER TABLE t1 AUTO_INCREMENT=1, ALGORITHM=INPLACE; |
--error ER_TABLESPACE_DISCARDED
|
ALTER TABLE t1 AUTO_INCREMENT=1, ALGORITHM=COPY; |
DROP TABLE t1; |
This bug was introduced somewhere in MySQL 5.7, which was merged to MariaDB 10.2.2.
Attachments
Issue Links
- is part of
-
MDEV-16142 Merge new release of InnoDB MySQL 5.7.22 to 10.2
-
- Closed
-